// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "default_notification",
      "message": "default",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.bottom: 250 placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.bottom: 250 placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.bottom: 250 placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": 250,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.bottom: 250 placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.bottom: 250 placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.button: icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.button: icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.button: icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": <ButtonBlock
        actions={Object {}}
        blockId="properties.button: icon_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        onClick={[Function]}
        properties={
          Object {
            "icon": "SaveOutlined",
            "title": "Close",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.button: icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.button: icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.closeIcon: AlertOutlined - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.closeIcon: AlertOutlined - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.closeIcon: AlertOutlined - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": <IconBlock
        actions={Object {}}
        blockId="properties.closeIcon: AlertOutlined_closeIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AlertOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.closeIcon: AlertOutlined_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.closeIcon: AlertOutlined - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.description: - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.description: - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.description: - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.description:_notification",
      "message": "properties.description:",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.description: - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.duration: 6 - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.duration: 6 - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.duration: 6 - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": 6,
      "icon": undefined,
      "id": "properties.duration: 6_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.duration: 6 - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="undefined_id"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.message - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.message - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.message - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.message_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.message - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomRight - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomRight - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomRight - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomRight_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomRight",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: bottomRight - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.top: 250 placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.top: 250 placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.top: 250 placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Args description",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.top: 250 placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": 250,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"description":"Args description"}} - properties.top: 250 placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "default_notification",
      "message": "default",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.bottom: 250 placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.bottom: 250 placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.bottom: 250 placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": 250,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.bottom: 250 placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.bottom: 250 placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.button: icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.button: icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.button: icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": <ButtonBlock
        actions={Object {}}
        blockId="properties.button: icon_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        onClick={[Function]}
        properties={
          Object {
            "icon": "SaveOutlined",
            "title": "Close",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.button: icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.button: icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.closeIcon: AlertOutlined - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.closeIcon: AlertOutlined - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.closeIcon: AlertOutlined - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": <IconBlock
        actions={Object {}}
        blockId="properties.closeIcon: AlertOutlined_closeIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AlertOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.closeIcon: AlertOutlined_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.closeIcon: AlertOutlined - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.description: - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.description: - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.description: - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": 1,
      "icon": undefined,
      "id": "properties.description:_notification",
      "message": "properties.description:",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.description: - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration: 6 - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration: 6 - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration: 6 - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.duration: 6_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration: 6 - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": <IconBlock
        actions={Object {}}
        blockId="undefined_id"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.message - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.message - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.message - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.message_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.message - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomRight - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomRight - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomRight - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.placement: bottomRight_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomRight",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: bottomRight - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: error_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: info_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: warning_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.top: 250 placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.top: 250 placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.top: 250 placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 1,
      "icon": undefined,
      "id": "properties.top: 250 placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": 250,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.top: 250 placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "default_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.bottom: 250 placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.bottom: 250 placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.bottom: 250 placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": 250,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.bottom: 250 placement: bottomLeft_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.bottom: 250 placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.button: icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.button: icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.button: icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": <ButtonBlock
        actions={Object {}}
        blockId="properties.button: icon_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        onClick={[Function]}
        properties={
          Object {
            "icon": "SaveOutlined",
            "title": "Close",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.button: icon_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.button: icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.closeIcon: AlertOutlined - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.closeIcon: AlertOutlined - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.closeIcon: AlertOutlined - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": <IconBlock
        actions={Object {}}
        blockId="properties.closeIcon: AlertOutlined_closeIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AlertOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.closeIcon: AlertOutlined_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.closeIcon: AlertOutlined - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.description: - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.description: - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.description: - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.description:_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.description: - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.duration: 6 - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.duration: 6 - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.duration: 6 - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 6,
      "icon": undefined,
      "id": "properties.duration: 6_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.duration: 6 - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="undefined_id"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.message - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.message - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.message - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.message_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.message - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomLeft_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomRight - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomRight - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomRight - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomRight_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomRight",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: bottomRight - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: topLeft_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.top: 250 placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.top: 250 placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.top: 250 placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.top: 250 placement: topLeft_notification",
      "message": "Args message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": 250,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"message":"Args message"}} - properties.top: 250 placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "default_notification",
      "message": "default",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.bottom: 250 placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.bottom: 250 placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.bottom: 250 placement: bottomLeft - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.bottom: 250 placement: bottomLeft - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": 250,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.bottom: 250 placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.button: icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.button: icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.button: icon - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.button: icon - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": <ButtonBlock
        actions={Object {}}
        blockId="properties.button: icon_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        onClick={[Function]}
        properties={
          Object {
            "icon": "SaveOutlined",
            "title": "Close",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.button: icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.closeIcon: AlertOutlined - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.closeIcon: AlertOutlined - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.closeIcon: AlertOutlined - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.closeIcon: AlertOutlined - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": <IconBlock
        actions={Object {}}
        blockId="properties.closeIcon: AlertOutlined_closeIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AlertOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.closeIcon: AlertOutlined_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.description: - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.description: - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.description: - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.description: - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.description:_notification",
      "message": "properties.description:",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration: 6 - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration: 6 - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration: 6 - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration: 6 - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 6,
      "icon": undefined,
      "id": "properties.duration: 6_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="undefined_id"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.message - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.message - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.message - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.message - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.message_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomLeft - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomLeft - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomRight - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomRight - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomRight - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: bottomRight - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomRight_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomRight",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: topLeft - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.placement: topLeft - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.top: 250 placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.top: 250 placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.top: 250 placement: topLeft - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.top: 250 placement: topLeft - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.top: 250 placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": 250,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "default_notification",
      "message": "default",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.bottom: 250 placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.bottom: 250 placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.bottom: 250 placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": 250,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.bottom: 250 placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.bottom: 250 placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.button: icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.button: icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.button: icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": <ButtonBlock
        actions={Object {}}
        blockId="properties.button: icon_button"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        onClick={[Function]}
        properties={
          Object {
            "icon": "SaveOutlined",
            "title": "Close",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.button: icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.button: icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.closeIcon: AlertOutlined - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.closeIcon: AlertOutlined - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.closeIcon: AlertOutlined - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": <IconBlock
        actions={Object {}}
        blockId="properties.closeIcon: AlertOutlined_closeIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AlertOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.closeIcon: AlertOutlined_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.closeIcon: AlertOutlined - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.description: - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.description: - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.description: - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.description:_notification",
      "message": "properties.description:",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.description: - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration: 6 - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration: 6 - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration: 6 - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": 6,
      "icon": undefined,
      "id": "properties.duration: 6_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration: 6 - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="undefined_id"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [MockFunction],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerAction": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "safelyCallMethod": [MockFunction],
            "setValue": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.message - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.message - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.message - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.message_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.message - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomRight - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomRight - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomRight - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: bottomRight_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "bottomRight",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: bottomRight - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": "Notification status type.",
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": undefined,
      "top": undefined,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.top: 250 placement: topLeft - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.top: 250 placement: topLeft - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.top: 250 placement: topLeft - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "bottom": undefined,
      "btn": undefined,
      "className": "{}",
      "closeIcon": undefined,
      "description": undefined,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.top: 250 placement: topLeft_notification",
      "message": "Notification message",
      "onClick": [Function],
      "onClose": [Function],
      "placement": "topLeft",
      "top": 250,
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.top: 250 placement: topLeft - value[0] - warning 1`] = `Array []`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.bottom: 250 placement: bottomLeft 1`] = `true`;

exports[`Test Schema properties.bottom: 250 placement: bottomLeft 2`] = `null`;

exports[`Test Schema properties.button: icon 1`] = `true`;

exports[`Test Schema properties.button: icon 2`] = `null`;

exports[`Test Schema properties.closeIcon: AlertOutlined 1`] = `true`;

exports[`Test Schema properties.closeIcon: AlertOutlined 2`] = `null`;

exports[`Test Schema properties.description: 1`] = `true`;

exports[`Test Schema properties.description: 2`] = `null`;

exports[`Test Schema properties.duration: 6 1`] = `true`;

exports[`Test Schema properties.duration: 6 2`] = `null`;

exports[`Test Schema properties.icon 1`] = `true`;

exports[`Test Schema properties.icon 2`] = `null`;

exports[`Test Schema properties.message 1`] = `true`;

exports[`Test Schema properties.message 2`] = `null`;

exports[`Test Schema properties.placement: bottomLeft 1`] = `true`;

exports[`Test Schema properties.placement: bottomLeft 2`] = `null`;

exports[`Test Schema properties.placement: bottomRight 1`] = `true`;

exports[`Test Schema properties.placement: bottomRight 2`] = `null`;

exports[`Test Schema properties.placement: topLeft 1`] = `true`;

exports[`Test Schema properties.placement: topLeft 2`] = `null`;

exports[`Test Schema properties.status: error 1`] = `true`;

exports[`Test Schema properties.status: error 2`] = `null`;

exports[`Test Schema properties.status: info 1`] = `true`;

exports[`Test Schema properties.status: info 2`] = `null`;

exports[`Test Schema properties.status: warning 1`] = `true`;

exports[`Test Schema properties.status: warning 2`] = `null`;

exports[`Test Schema properties.top: 250 placement: topLeft 1`] = `true`;

exports[`Test Schema properties.top: 250 placement: topLeft 2`] = `null`;
